feat: fim das paginas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <br />
         apoio e um plano de evolução feito pra quem tá começando.
       </p>
-      <button class="btn-default">Inscreva-se na mentoria</button>
+      <a href="parabens.html" target="_blank"><button class="btn-default">Inscreva-se na mentoria</button></a>
     </header>
 
     <main>
